--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Using Material 2 (MaterialComponents) theme -->
-    <style name="Theme.Dramebaz" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <!-- Using Material 3 (Material3) theme -->
+    <style name="Theme.Dramebaz" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryVariant">@color/primary_variant</item>
+        <item name="colorPrimaryContainer">@color/primary_light</item>
         <item name="colorOnPrimary">@color/on_primary</item>
+        <item name="colorOnPrimaryContainer">@color/primary</item>
         <item name="colorSecondary">@color/secondary</item>
-        <item name="colorSecondaryVariant">@color/secondary_variant</item>
+        <item name="colorSecondaryContainer">@color/secondary_variant</item>
         <item name="colorOnSecondary">@color/on_secondary</item>
+        <item name="colorOnSecondaryContainer">@color/on_secondary</item>
         <item name="android:colorBackground">@color/background</item>
         <item name="colorSurface">@color/surface</item>
+        <item name="colorSurfaceVariant">@color/surface_variant</item>
+        <item name="colorSurfaceContainerHigh">@color/surface_variant</item>
         <item name="colorOnSurface">@color/on_surface</item>
+        <item name="colorOnSurfaceVariant">@color/on_surface_variant</item>
         <item name="android:statusBarColor">@color/primary</item>
         <item name="android:navigationBarColor">@color/background</item>
         <item name="android:windowLightStatusBar">false</item>
@@ -18,17 +23,17 @@
         <item name="materialButtonStyle">@style/Widget.Dramebaz.Button</item>
     </style>
 
-    <!-- Buttons: readable text size (16sp). Use Material 2 parents. -->
-    <style name="Widget.Dramebaz.Button" parent="Widget.MaterialComponents.Button">
+    <!-- Buttons: readable text size (16sp). Use Material 3 parents. -->
+    <style name="Widget.Dramebaz.Button" parent="Widget.Material3.Button">
         <item name="android:textSize">16sp</item>
     </style>
-    <style name="Widget.Dramebaz.Button.Outlined" parent="Widget.MaterialComponents.Button.OutlinedButton">
+    <style name="Widget.Dramebaz.Button.Outlined" parent="Widget.Material3.Button.OutlinedButton">
         <item name="android:textSize">16sp</item>
     </style>
-    <style name="Widget.Dramebaz.Button.Tonal" parent="Widget.MaterialComponents.Button.OutlinedButton">
+    <style name="Widget.Dramebaz.Button.Tonal" parent="Widget.Material3.Button.TonalButton">
         <item name="android:textSize">16sp</item>
     </style>
-    <style name="Widget.Dramebaz.Button.Text" parent="Widget.MaterialComponents.Button.TextButton">
+    <style name="Widget.Dramebaz.Button.Text" parent="Widget.Material3.Button.TextButton">
         <item name="android:textSize">16sp</item>
     </style>
 
